--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Haineko
 
+0.2.3   Wed, 13 Nov 2013 03:22:22 +0900 (JST)
+    - Fix base64 encoded data in <DATA> section of Haineko::CLI::Setup::Data.
+
 0.2.2   Tue, 12 Nov 2013 22:22:22 +0900 (JST)
     - Haineko::CLI::Password for ``bin/hainekoctl pw''.
     - Haineko::CLI::Setup::Data for ``bin/hainekoctl make-setup-data''.
