--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Haineko
 
+0.2.10
+    - New aliases: "send"(mail) and "recv"(rcpt) for email data as a JSON.
+    - Haineko does fork() when the number of recipients is greater than 1.
+    - New haineko.cf configuration: "max_workers" is the limit of forked worker
+      processes.
+
 0.2.9   Mon,  2 Dec 2013 12:22:22 +0900 (JST)
     - Fixed an issue that "debug" property defined in mailertable is not used at 
       child class of Haineko::SMTPD::Relay which are using Net::SMTP.
