Update release notes

--- a/Changes
+++ b/Changes
@@ -1,10 +1,11 @@
 Revision history for Haineko
 
-0.2.10  Tue, 17 Dec 2013 18:22:22 +0900 (JST)
+0.2.10  Tue, 17 Dec 2013 20:22:22 +0900 (JST)
     - New aliases: "send"(mail) and "recv"(rcpt) for email data as a JSON.
     - Haineko does fork() when the number of recipients is greater than 1.
     - New haineko.cf configuration: "max_workers" is the limit of forked worker
       processes.
+    - Check message body size.
 
 0.2.9   Mon,  2 Dec 2013 12:22:22 +0900 (JST)
     - Fixed an issue that "debug" property defined in mailertable is not used at 
