Update release notes

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Haineko
 
+0.2.11  Tue, 18 Dec 2013 11:22:22 +0900 (JST)
+    - Fixed issues: Travis CI Build #26 #27, and #28.
+
 0.2.10  Tue, 17 Dec 2013 20:22:22 +0900 (JST)
     - New aliases: "send"(mail) and "recv"(rcpt) for email data as a JSON.
     - Haineko does fork() when the number of recipients is greater than 1.
