--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 Revision history for Haineko
 
-0.2.11  Tue, 18 Dec 2013 11:22:22 +0900 (JST)
+0.2.11  Tue, 18 Dec 2013 20:22:22 +0900 (JST)
     - Fixed issues: Travis CI Build #26 #27, and #28.
+    - The field name of ``Reply-To'' header in JSON data has been changed from
+      "reply-to" to "replyto", hyphen was deleted.
 
 0.2.10  Tue, 17 Dec 2013 20:22:22 +0900 (JST)
     - New aliases: "send"(mail) and "recv"(rcpt) for email data as a JSON.
