--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Revision history for Haineko
 
+x.y.z
+    - Haineko::SMTPD::Relay::Screen is a class for printing an email to standard
+      error device.
+    - Haineko::SMTPD::Relay::File is a class for saving an email to /tmp direc-
+      tory or the specified directory in etc/mailertable file.
+
 0.2.11  Tue, 18 Dec 2013 20:22:22 +0900 (JST)
     - Fixed issues: Travis CI Build #26 #27, and #28.
     - The field name of ``Reply-To'' header in JSON data has been changed from
