--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@ Revision history for Haineko
     - New URL /sample/mail respond sample email data.
     - Respond "Access denied" as a JSON when the client address is not the same
       address of the server.
+    - Maybe fixed for CPAN Testers Report 9ad9acca-78b1-11e3-a3d9-01ccd95af652,
+      issue #9 at t/127-smtpd-relay-mx.t. Thanks to Nigel Horne.
+    - Fixed an issue that the app process does not exit at "hainekoctl stop".
 
 0.2.13  Fri,  3 Jan 2014 17:41:11 +0900 (JST)
     - Fixed base64 encoded setup data for "setup" sub command of bin/hainekoctl
